# Uni_AlPro

./: .gitlab-ci.yml  Hallo.txt  README.md  erst.txt  txt.txt
Aufgabe01/: Kohn  Kohn.cpp  Perfilev.cpp
Aufgabe02/: main  main.cpp
Aufgabe03/examples/: demo.cpp
Aufgabe03/include/: meine_funktionen.hpp
Aufgabe04/examples/: demo.cpp
Aufgabe04/src/: meine_funktionen.cpp
uebungscode_05/: .gitignore
uebungscode_05/examples/: aufg1.cpp  aufg2.cpp  aufg3.cpp
uebungscode_05/include/: minsort_in_place.hpp
uebungscode_05/include/hanoi/: hanoi.hpp  hanoi_loesen.hpp
uebungscode_05/src/: hanoi.cpp  hanoi_loesen.cpp  minsort_in_place.cpp
uebungscode_06/examples/: aufg1.cpp  aufg2.cpp  aufg3.cpp  aufgabe_02.txt
uebungscode_06/include/: mergesort.hpp  minsort.hpp  minsort_in_place.hpp
uebungscode_06/include/simpler_graph/: simpler_graph.hpp
uebungscode_06/src/: mergesort.cpp  minsort.cpp  simpler_graph.cpp
uebungscode_07/: CMakeLists.txt
uebungscode_07/examples/: aufg1.cpp  aufg2.cpp
uebungscode_07/include/simpler_graph/: simpler_graph.hpp
uebungscode_07/src/: simpler_graph.cpp
uebungscode_08/examples/: aufg1.cpp  aufg2.cpp
uebungscode_08/src/: binarytree.cpp  list.cpp  treenode.cpp
uebungscode_09/: CMakeLists.txt
uebungscode_09/examples/: aufg1.cpp  aufg2.cpp
uebungscode_09/include/datenstrukturen/: binary_tree.hpp  binary_tree_node.hpp  (+2 more)
uebungscode_09/src/: binary_tree.cpp  binary_tree_node.cpp  doubly_linked_list.cpp
uebungscode_10/: CMakeLists.txt
uebungscode_10/examples/: aufg2.cpp
uebungscode_10/src/: hashtable.cpp
(+3 files in other folders)
